Adding auth session variable

--- a/static/template/partial/menu.tmpl
+++ b/static/template/partial/menu.tmpl
@@ -1,15 +1,28 @@
 {{define "menu"}}
+{{if eq .AuthLevel "auth"}}
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
 	  <div class="navbar-header">
 		<a class="navbar-brand" href="#">BonGO Site</a>
 	  </div>
 	  <ul class="nav navbar-nav">
-		<li class="active"><a href="#">Home</a></li>
-		<li><a href="#">Services</a></li>
-		<li><a href="#">Prices</a></li>
-		<li><a href="#">Contact</a></li>
+		<li class="active"><a href="/">Home</a></li>
+		<li><a href="/services">Services</a></li>
+		<li><a href="/about">Contact</a></li>
 	  </ul>
 	</div>
 	</nav>
+	{{else}}
+	<nav class="navbar navbar-default">
+		<div class="container-fluid">
+			<div class="navbar-header">
+			<a class="navbar-brand" href="#">BonGO Site</a>
+			</div>
+			<ul class="nav navbar-nav">
+			<li class="active"><a href="/">Home</a></li>
+			<li><a href="/about">Contact</a></li>
+			</ul>
+		</div>
+		</nav>
+	{{end}}
 {{end}}
