--- a/static/template/index/auth.tmpl
+++ b/static/template/index/auth.tmpl
@@ -1,4 +1,4 @@
-{{define "title"}}COPYGURU{{end}}
+{{define "title"}}BinGo Site{{end}}
 {{define "head"}}{{end}}
 {{define "content"}}
 <div class="container">
