--- a/static/template/about/about.tmpl
+++ b/static/template/about/about.tmpl
@@ -1,13 +1,9 @@
 {{define "title"}}Contact{{end}}
-{{define "head"}}
-	{{ CSS "//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" }}
-	{{ JS "//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" }}
-	{{ JS "//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" }}
-{{end}}
+{{define "head"}}{{end}}
 {{define "content"}}
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 <div class="container">
-    <h2 class="text-center">Contac Form</h2>
+    <h2 class="text-center">Contact Form</h2>
 	<div class="row justify-content-center">
 		<div class="col-12 col-md-8 col-lg-6 pb-5">
                     <form action="mail.php" method="post">
