--- a/static/template/base.tmpl
+++ b/static/template/base.tmpl
@@ -9,8 +9,7 @@
 	<meta name="author" content="">
 
 	<title>{{template "title" .}}</title>
-
-	{{CSS "static/css/bootstrap.min.css"}}
+	{{ CSS "//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" }}
 	{{CSS "static/css/global.css"}}
 
 	{{template "head" .}}
@@ -30,7 +29,8 @@
 	</div>
 	{{JS "static/js/jquery1.11.0.min.js"}}
 	{{JS "static/js/underscore-min.js"}}
-	{{JS "static/js/bootstrap.min.js"}}
+	{{ JS "//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" }}
+	{{ JS "//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" }}
 	{{JS "static/js/global.js"}}
 	{{template "footer" .}}
 	{{template "foot" .}}
