--- a/static/css/global.css
+++ b/static/css/global.css
@@ -11,7 +11,7 @@ body {
     padding-bottom: 30px;
 }
 
-.main-container {
+#main-container {
     padding-top: 0px !important;
     min-height: calc(100vh - 100px);
 }
