--- a/static/template/index/anon.tmpl
+++ b/static/template/index/anon.tmpl
@@ -2,7 +2,7 @@
 {{define "head"}}{{end}}
 {{define "content"}}
 <div class="container">
-	<div id="demo" class="carousel slide" data-ride="carousel" style="max-height: 500px;">
+	<div id="demo" class="carousel slide" data-ride="carousel" style="max-height: 350px; overflow: hidden;">
 
 			<!-- Indicators -->
 			<ul class="carousel-indicators">
